<resources>
    <string name="app_name">CaredFor</string>
    <string name="action_settings">Settings</string>
    <string name="add_item">Add Item</string>
    <string name="view_to_do_list">View To Do List</string>
    <string name="to_do">To Do</string>
    <string name="tap_an_item_to_delete">Tap an item to delete</string>
    <string name="add_new_item">Add new item</string>
    <string name="title_activity_add_data">activity_add_data</string>
    <string name="title_splash">splash</string>
    <string name="title_activity_view_data">activity_view_data</string>
    <string name="caredfor">CaredFor</string>
    <string name="exit">Exit</string>
    <string name="about">About</string>
    <string name="add">Add</string>
    <string name="reset">Reset</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="login">Login</string>
    <string name="first_name_view">First Name</string>
    <string name="create_an_account">Create an Account</string>
    <string name="last_name">Last Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="email_address">Email Address</string>
    <string name="caretaker">Caregiver</string>
    <string name="family_member">Family Member</string>
    <string name="submit">Submit</string>
    <string name="register_an_account">Register An Account</string>
    <string name="first_name">First Name</string>
    <string name="role">Role</string>
    <string name="relative">Relative</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="dependent">Tap to add new family member</string>
    <string name="add_a_dependent">Add A Family Member</string>
    <string name="address">Address</string>
    <string name="title_activity_main">activity_main</string>
    <string name="title_activity_add_senior">activity_add_senior</string>
    <string name="title_activity_add_senior_to_caretaker">activity_add_senior_to_caretaker</string>
    <string name="title_activity_add_senior_to_relative">activity_add_senior_to_relative</string>
    <string name="title_activity_main_relative">activity_main_relative</string>
    <string name="careschedule">Care Schedule</string>
    <string name="title_relative_careschedule">activity_relative_careschedule</string>
    <string name="activity_relative_careschedule_date">activity_relative_careschedule_date</string>
    <string name="title_caretaker_careschedule">activity_caretaker_careschedule</string>
    <string name="title_caretaker_careschedule_date">activity_caretaker_careschedule_date</string>
    <string name="sun">Sun</string>
    <string name="mon">Mon</string>
    <string name="tue">Tue</string>
    <string name="wed">Wed</string>
    <string name="thu">Thu</string>
    <string name="sat">Sat</string>
    <string name="fri">Fri</string>
    <string name="title_caretaker_food_intake">caretaker_food_intake</string>
    <string name="type_comment_here">Type your comment here</string>
    <string name="food_intake">Food Intake</string>
    <string name="breakfast">Breakfast</string>
    <string name="lunch">Lunch</string>
    <string name="dinner">Dinner</string>
    <string name="leave_empty_if_not_applicable">(Leave empty if not applicable)</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="sex">Sex</string>
    <string name="title_relative_food_intake">relative_food_intake</string>
    <string name="hygiene">Hygiene</string>
    <string name="sleep">Sleep</string>
    <string name="medication">Medication</string>
    <string name="activities">Activities</string>
    <string name="mood">Mood</string>
    <string name="no_senior_main_activity">No Family Members</string>
    <string name="activity_caretask_handler">caretask_handler</string>
    <string name="activity_activities_handler">activities_handler</string>
    <string name="activity_add_activities">add_activities</string>
    <string name="comments">Comments</string>
    <string name="shopping">Shopping</string>
    <string name="walking">Walking</string>
    <string name="physio">Physio</string>
    <string name="medical_trips">Medical Trips</string>
    <string name="games">Games</string>
    <string name="socializing">Socializing</string>
    <string name="swimming">Swimming</string>
    <string name="sports">Sports</string>
    <string name="other">Other</string>
    <string name="check_activities_to_add">Check Activities to Add</string>
    <string name="exercise">Exercise</string>
    <string name="add_any_details">Add any details!</string>
    <string name="medication_taken">Medication Taken</string>
    <string name="medication_low">Medication Low</string>
    <string name="medication_refilled">Medication Refilled</string>
    <string name="night">Night</string>
    <string name="afternoon">Afternoon</string>
    <string name="morning">Morning</string>
    <string name="check_medication_details">Check Medication Details</string>
    <string name="select_time_of_sleep">Select Time Of Sleep</string>
    <string name="check_any_hygiene_activities">Check Any Hygiene Activities</string>
    <string name="shaving">Shaving</string>
    <string name="toilet">Toilet</string>
    <string name="dressing">Dressing</string>
    <string name="pedicure">Pedicure</string>
    <string name="skin_care">Skin Care</string>
    <string name="oral_hygiene">Oral Hygiene</string>
    <string name="bathing">Bathing</string>
    <string name="grooming">Grooming</string>
    <string name="comments_colon">Comments:</string>
    <string name="no_comments_found">No comments found for this date</string>
    <string name="care_schedule">Care Schedule</string>
    <string name="departure">Departure</string>
    <string name="arrival">Arrival</string>
    <string name="facebook_app_id">1051026208330592</string>
    <string name="fb_login_protocol_scheme">fb1051026208330592</string>
    <string name="schedulr_for_this_date">Schedule for this date:</string>
</resources>
