<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:id="@+id/add_sleep_layout">

    <TextView
        android:id="@+id/add_sleep_title"
        android:layout_width="wrap_content"
        android:layout_height="50sp"
        android:layout_marginTop="33dp"
        android:text="@string/sleep"
        android:textAlignment="center"
        android:textColor="@color/colorPrimary"
        android:textSize="30sp"
        android:textStyle="bold"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="match_parent"
        android:layout_height="30sp"
        android:layout_below="@+id/add_sleep_title"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="12dp"
        android:text="@string/leave_empty_if_not_applicable"
        android:textAlignment="center"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView10"
        android:layout_centerHorizontal="true"
        android:text="@string/select_time_of_sleep" />

    <EditText
        android:id="@+id/sleep_comments"
        android:layout_width="wrap_content"
        android:layout_height="175sp"
        android:ems="10"
        android:hint="@string/add_any_details"
        android:inputType="textMultiLine"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/night" />

    <Button
        android:id="@+id/submit_sleep"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="12dp"
        android:text="@string/submit"
        android:textColor="@color/colorAccent"
        android:textSize="20sp"
        android:textStyle="bold" />

    <CheckBox
        android:id="@+id/morning"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/morning"
        android:layout_below="@+id/textView14"
        android:layout_alignLeft="@+id/afternoon"
        android:layout_alignStart="@+id/afternoon"
        android:layout_marginTop="28dp" />

    <CheckBox
        android:id="@+id/afternoon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/afternoon"
        android:layout_marginTop="21dp"
        android:layout_below="@+id/morning"
        android:layout_alignLeft="@+id/night"
        android:layout_alignStart="@+id/night" />

    <CheckBox
        android:id="@+id/night"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/night"
        android:layout_marginTop="24dp"
        android:layout_below="@+id/afternoon"
        android:layout_alignLeft="@+id/sleep_comments"
        android:layout_alignStart="@+id/sleep_comments" />

</RelativeLayout>