<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/add_medication_layout">
    <TextView
        android:id="@id/add_medication_title"
        android:layout_width="wrap_content"
        android:layout_height="50sp"
        android:layout_marginTop="33dp"
        android:text="@string/medication"
        android:textAlignment="center"
        android:textColor="@color/colorPrimary"
        android:textSize="30sp"
        android:textStyle="bold"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="match_parent"
        android:layout_height="30sp"
        android:layout_below="@+id/add_medication_title"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="12dp"
        android:text="@string/leave_empty_if_not_applicable"
        android:textAlignment="center"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView10"
        android:layout_centerHorizontal="true"
        android:text="@string/check_medication_details" />

    <EditText
        android:id="@+id/medication_comments"
        android:layout_width="wrap_content"
        android:layout_height="175sp"
        android:ems="10"
        android:hint="@string/add_any_details"
        android:inputType="textMultiLine"
        android:layout_below="@+id/med_refilled"
        android:layout_centerHorizontal="true" />

    <Button
        android:id="@+id/submit_medication"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="14dp"
        android:text="@string/submit"
        android:textColor="@color/colorAccent"
        android:textSize="20sp"
        android:textStyle="bold" />

    <CheckBox
        android:id="@+id/med_taken"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/medication_taken"
        android:layout_below="@+id/textView14"
        android:layout_alignLeft="@+id/med_low"
        android:layout_alignStart="@+id/med_low"
        android:layout_marginTop="28dp" />

    <CheckBox
        android:id="@+id/med_low"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/medication_low"
        android:layout_marginTop="21dp"
        android:layout_below="@+id/med_taken"
        android:layout_alignLeft="@+id/med_refilled"
        android:layout_alignStart="@+id/med_refilled" />

    <CheckBox
        android:id="@+id/med_refilled"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/medication_refilled"
        android:layout_marginTop="24dp"
        android:layout_below="@+id/med_low"
        android:layout_alignLeft="@+id/medication_comments"
        android:layout_alignStart="@+id/medication_comments" />


</RelativeLayout>